--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    </title>tevyees</title>
+    <title>tevyees</title>
     <meta charset="utf-8">
 </head>
 <body>
