--- a/index.html
+++ b/index.html
@@ -1,10 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Previous title was "Space Jam 2" -->
     <title>tevyees</title>
     <meta charset="utf-8">
 </head>
 <body>
-<h1>Heading 1</h1>
+  <header>
+      <h1>Main Title</h1>
+  </header>
+  <section>
+    <h1>Section Title</h1>
+    <p>This is a section.</p>
+  </section>
+  <section>
+  <ol>
+      <li>First item</li>
+        <ul>
+            <li>Second request</li>
+            <li>First request</li>
+        </ul>
+      <li>Second item</li>
+      <li>Third item</li>
+  <ol/>
+  </section>
+  <section>
+  <ul>
+      <li>Second Item</li>
+        <ol>
+            <li>First request</li>
+            <li>Second request</li>
+        </ol>
+      <li>Third Item</li>
+      <li>First Item</li>
+  </ul>
+  </section>
 </body>
-</html>
+<body>
+    <!-- Hello There -->
+    <header>
+      <h1>My Website</h1>
+      <h2>About Me</h2>
+      <p>This is my website about stray cats.</p>
+    </header>
+
+      <section>
+          <h1>Section 1</h1>
+          <p>This is section 1</p>
+      </section>
+      <section>
+        <h2>Favourite colours</h2>
+        <ol>
+          <li>Red</li>
+          <li>Blue</li>
+          <li>Green</li>
+        </ol>
+      </section>
+      <section>
+        <h2>Favourite Fruits</h2>
+        <ul>
+          <li>Apples</li>
+          <li>Bananas</li>
+          <li>Oranges</li>
+        </ul>
+      </section>
+
+      <footer>
+        <p>Website made by Tevan.</p>
+      </footer>
+</body>
+<!-- <body>
+  <section>
+    <h1>Space Stuff</h1>
+    <p>Hi, my name is Tevan. This is my website about outer space!</p>
+    <h2>Stars</h2>
+    <h3>Galaxies</h3>
+    <div>
+        <div></div>
+    </div>
+  </section>
+  <footer>
+      <h1>Footer</h1>
+      <p>This is a footer.</p>
+  </footer>
+</body>
+</html> -->
