--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <header>
       <h1>Main Title</h1>
   </header>
+  <a href="#footer">Footer</a>
   <section>
     <h1>Section Title</h1>
     <p>This is a section.</p>
@@ -63,25 +64,25 @@
           <li>Bananas</li>
           <li>Oranges</li>
         </ul>
+        <img src="images\Screenshot_(3).png"
+          alt="Photo of me playing Among Us."
+          width= "400"
+          height= "300"  />
+      <section>
+        <img src="images\pexels-photo-tunnel_(Medium).jpeg"
+          alt="photo of train tracks in a tunnel"  />
       </section>
+      <section>
+        <img src="images\Screenshot_3_(Small).png"
+          alt="resized the first image"  />
+      </section>
+      <section>
+        <a href="http://www.google.com"
+          target="_blank">
+          Google
+        </a>
 
-      <footer>
+      <footer id="footer">
         <p>Website made by Tevan.</p>
       </footer>
 </body>
-<!-- <body>
-  <section>
-    <h1>Space Stuff</h1>
-    <p>Hi, my name is Tevan. This is my website about outer space!</p>
-    <h2>Stars</h2>
-    <h3>Galaxies</h3>
-    <div>
-        <div></div>
-    </div>
-  </section>
-  <footer>
-      <h1>Footer</h1>
-      <p>This is a footer.</p>
-  </footer>
-</body>
-</html> -->
