--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Previous title was "Space Jam 2" -->
     <title>tevyees</title>
-    <meta charset="utf-8">
+      <meta charset="utf-8">
+      <link rel="stylesheet"
+        href="styles.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
       <h1>Main Title</h1>
@@ -36,8 +40,6 @@
       <li>First Item</li>
   </ul>
   </section>
-</body>
-<body>
     <!-- Hello There -->
     <header>
       <h1>My Website</h1>
