--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="#footer">Footer</a>
   <section>
     <h1>Section Title</h1>
-    <p>This is a section.</p>
+    <p>This is a <em>section.</em> a section about items. Items that are numbered and not numbered.I am typing words to take up space. Hey Hi Hello. Bonjour monsieur common tapel tu?  </p>
   </section>
   <section>
   <ol>
@@ -49,7 +49,7 @@
 
       <section>
           <h1>Section 1</h1>
-          <p>This is section 1</p>
+          <p>This is <strong>section 1.</strong></p>
       </section>
       <section>
         <h2>Favourite colours</h2>
