--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
   <header>
-      <h1>Main Title</h1>
+      <h1 class="title">Main Title</h1>
   </header>
   <a href="#footer">Footer</a>
   <section>
     <h1>Section Title</h1>
-    <p>This is a <em>section.</em> a section about items. Items that are numbered and not numbered.I am typing words to take up space. Hey Hi Hello. Bonjour monsieur common tapel tu?  </p>
+    <p>This is a <em>section.</em> a section about items. Items that are numbered and not numbered.I am typing words to take up space. Hey Hi Hello. Bonjour monsieur common tapel tu? </p>
   </section>
   <section>
   <ol>
@@ -43,7 +43,7 @@
     <!-- Hello There -->
     <header>
       <h1>My Website</h1>
-      <h2>About Me</h2>
+      <h2> About Me</h2>
       <p>This is my website about stray cats.</p>
     </header>
 
@@ -66,6 +66,8 @@
           <li>Bananas</li>
           <li>Oranges</li>
         </ul>
+      </section>
+      <section>
         <img src="images\Screenshot_(3).png"
           alt="Photo of me playing Among Us."
           width= "400"
@@ -75,7 +77,7 @@
           alt="photo of train tracks in a tunnel"  />
       </section>
       <section>
-        <img src="images\Screenshot_3_(Small).png"
+        <img class="photo" src="images\Screenshot_3_(Small).png"
           alt="resized the first image"  />
       </section>
       <section>
@@ -83,7 +85,16 @@
           target="_blank">
           Google
         </a>
-
+      </section>
+      <!-- <section> -->
+        <!-- <h2 class="title">Title</h2> -->
+      <!-- </sectoin> -->
+      <section>
+        <div class="post post-featured">
+          <h2>Post title</h2>
+          <p>Post description</p>
+        </div>
+      </section>
       <footer id="footer">
         <p>Website made by Tevan.</p>
       </footer>
