--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+on<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>tevyees</title>
@@ -13,88 +13,95 @@
   <header>
       <h1 class="title">Main Title</h1>
   </header>
-  <a href="#footer">Footer</a>
-  <section>
-    <h1>Section Title</h1>
-    <p>This is a <em>section.</em> a section about items. Items that are numbered and not numbered.I am typing words to take up space. Hey Hi Hello. Bonjour monsieur common tapel tu? </p>
-  </section>
-  <section>
-  <ol>
-      <li>First item</li>
-        <ul>
-            <li>Second request</li>
-            <li>First request</li>
-        </ul>
-      <li>Second item</li>
-      <li>Third item</li>
-  <ol/>
-  </section>
-  <section>
-  <ul>
-      <li>Second Item</li>
-        <ol>
-            <li>First request</li>
-            <li>Second request</li>
-        </ol>
-      <li>Third Item</li>
-      <li>First Item</li>
-  </ul>
-  </section>
-    <!-- Hello There -->
-    <header>
-      <h1>My Website</h1>
-      <h2> About Me</h2>
-      <p>This is my website about stray cats.</p>
-    </header>
 
-      <section>
-          <h1>Section 1</h1>
-          <p>This is <strong>section 1.</strong></p>
-      </section>
-      <section>
-        <h2>Favourite colours</h2>
-        <ol>
-          <li>Red</li>
-          <li>Blue</li>
-          <li>Green</li>
-        </ol>
-      </section>
-      <section>
-        <h2>Favourite Fruits</h2>
-        <ul>
-          <li>Apples</li>
-          <li>Bananas</li>
-          <li>Oranges</li>
-        </ul>
-      </section>
-      <section>
-        <img src="images\Screenshot_(3).png"
-          alt="Photo of me playing Among Us."
-          width= "400"
-          height= "300"  />
-      <section>
-        <img src="images\pexels-photo-tunnel_(Medium).jpeg"
-          alt="photo of train tracks in a tunnel"  />
-      </section>
-      <section>
-        <img class="photo" src="images\Screenshot_3_(Small).png"
-          alt="resized the first image"  />
-      </section>
-      <section>
-        <a href="http://www.google.com"
-          target="_blank">
-          Google
-        </a>
-      </section>
-      <!-- <section> -->
-        <!-- <h2 class="title">Title</h2> -->
-      <!-- </sectoin> -->
-      <section>
-        <div class="post post-featured">
-          <h2>Post title</h2>
-          <p>Post description</p>
-        </div>
-      </section>
+<div class="banner"></div>
+
+  <a href="#footer">Footer</a>
+  <div class="container">
+
+    <section>
+      <h1>Section Title</h1>
+      <p>This is a <em>section.</em> a section about items. Items that are numbered and not numbered.I am typing words to take up space. Hey Hi Hello. Bonjour monsieur common tapel tu? </p>
+    </section>
+    <section>
+    <ol>
+        <li>First item</li>
+          <ul>
+              <li>Second request</li>
+              <li>First request</li>
+          </ul>
+        <li>Second item</li>
+        <li>Third item</li>
+    <ol/>
+    </section>
+    <section>
+    <ul>
+        <li>Second Item</li>
+          <ol>
+              <li>First request</li>
+              <li>Second request</li>
+          </ol>
+        <li>Third Item</li>
+        <li>First Item</li>
+    </ul>
+    </section>
+      <!-- Hello There -->
+      <header>
+        <h1>My Website</h1>
+        <h2> About Me</h2>
+        <p>This is my website about stray cats.</p>
+      </header>
+
+        <section>
+            <h1>Section 1</h1>
+            <p>This is <strong>section 1.</strong></p>
+        </section>
+        <section>
+          <h2>Favourite colours</h2>
+          <ol>
+            <li>Red</li>
+            <li>Blue</li>
+            <li>Green</li>
+          </ol>
+        </section>
+        <section>
+          <h2>Favourite Fruits</h2>
+          <ul>
+            <li>Apples</li>
+            <li>Bananas</li>
+            <li>Oranges</li>
+          </ul>
+        </section>
+        <section>
+          <img src="images\Screenshot_(3).png"
+            alt="Photo of me playing Among Us."
+            width= "400"
+            height= "300"  />
+        <section>
+          <img src="images\pexels-photo-tunnel_(Medium).jpeg"
+            alt="photo of train tracks in a tunnel"  />
+        </section>
+        <section>
+          <img class="photo" src="images\Screenshot_3_(Small).png"
+            alt="resized the first image"  />
+        </section>
+        <section>
+          <a href="http://www.google.com"
+            target="_blank">
+            Google
+          </a>
+        </section>
+        <!-- <section> -->
+          <!-- <h2 class="title">Title</h2> -->
+        <!-- </sectoin> -->
+        <section>
+          <div class="post post-featured">
+            <h2>Post title</h2>
+            <p>Post description</p>
+          </div>
+        </section>
+
+      </div>
       <footer id="footer">
         <p>Website made by Tevan.</p>
       </footer>
