--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ on<!DOCTYPE html>
 
 <body>
   <header>
-      <h1 class="title">Main Title</h1>
+      <h1 class="title">Social Media Hub</h1>
   </header>
 
 <div class="banner"></div>
@@ -20,59 +20,72 @@ on<!DOCTYPE html>
   <div class="container">
 
     <section>
-      <h1>Section Title</h1>
-      <p>This is a <em>section.</em> a section about items. Items that are numbered and not numbered.I am typing words to take up space. Hey Hi Hello. Bonjour monsieur common tapel tu? </p>
+      <h1>Content Creators</h1>
+      <p>I am creating a website that makes it easy for you, a content creator to organize your social media posts. This is meant to help you make sure you share on all platforms. There will be a simple process: 1. Where are you sharing content? 2. Selfless Promotion.  </p>
     </section>
     <section>
-    <ol>
-        <li>First item</li>
-          <ul>
-              <li>Second request</li>
-              <li>First request</li>
-          </ul>
-        <li>Second item</li>
-        <li>Third item</li>
-    <ol/>
-    </section>
-    <section>
+      <h1>Media Share</h1>
     <ul>
-        <li>Second Item</li>
-          <ol>
-              <li>First request</li>
-              <li>Second request</li>
-          </ol>
-        <li>Third Item</li>
-        <li>First Item</li>
+        <li>    <a href="https://www.twitch.tv/"
+              target="_blank">
+              Twitch
+            </a> </li>
+        <li> <a href="https://www.youtube.com/"
+          target="_blank">
+          YouTube
+        </a> </li>
+        <li> <a href="https://www.instagram.com/"
+          target="_blank">
+          Instagram
+        </a> </li>
+    </ul>
+    </section>
+    <section>
+      <h1>Selfless Promotion</h1>
+    <ul>
+        <li> <a href="https://twitter.com/login"
+          target="_blank">
+          Twitter
+        </a> </li>
+        <li> <a href="https://www.facebook.com/"
+          target="_blank">
+          Facebook
+        </a> </li>
+        <li> <a href="https://www.instagram.com/"
+          target="_blank">
+          Instagram
+        </a> </li>
     </ul>
     </section>
       <!-- Hello There -->
-      <header>
+      <!-- <header>
         <h1>My Website</h1>
         <h2> About Me</h2>
         <p>This is my website about stray cats.</p>
-      </header>
-
-        <section>
-            <h1>Section 1</h1>
-            <p>This is <strong>section 1.</strong></p>
-        </section>
-        <section>
-          <h2>Favourite colours</h2>
+      </header> -->
+    <!-- <section>
+          <h1>Section 1</h1>
+            <p>1. Will you be streaming live on twitch? Posting a Video on YouTube? or Sharing a photo on Instagram?</p>
+    </section> -->
+    <section>
+          <h1>Process</h1>
           <ol>
-            <li>Red</li>
-            <li>Blue</li>
-            <li>Green</li>
+            <li>Will you be streaming live on twitch, posting a video on youtube, or sharing a photo on instagram?</li>
+            <li>Share a post on all Social Media Platforms promoting your content of choice.</li>
           </ol>
-        </section>
-        <section>
-          <h2>Favourite Fruits</h2>
+    </section>
+    <section>
+          <h1>Notes</h1>
           <ul>
-            <li>Apples</li>
-            <li>Bananas</li>
-            <li>Oranges</li>
+            <li>It is best to add a link of what you are promoting to your post.</li>
+            <li>Connect your various social medias through the same account for easier sharing.</li>
+            <li>Set a schedule for when you stream and post videos.</li>
+            <li>Instagram can be used for promotion and can be promoted itself.</li>
+            <li>Get some fresh air, take a break away from the screen.</li>
+            <!-- <li>Repeat</li> -->
           </ul>
-        </section>
-        <section>
+    </section>
+        <!-- <section>
           <img src="images\Screenshot_(3).png"
             alt="Photo of me playing Among Us."
             width= "400"
@@ -84,24 +97,27 @@ on<!DOCTYPE html>
         <section>
           <img class="photo" src="images\Screenshot_3_(Small).png"
             alt="resized the first image"  />
-        </section>
-        <section>
+        </section> -->
+    <!-- <section>
           <a href="http://www.google.com"
             target="_blank">
             Google
           </a>
-        </section>
+    </section> -->
         <!-- <section> -->
           <!-- <h2 class="title">Title</h2> -->
         <!-- </sectoin> -->
-        <section>
+    <section>
           <div class="post post-featured">
-            <h2>Post title</h2>
-            <p>Post description</p>
+            <h1>Double Check</h1>
+            <ul>
+              <li>A link to all other social media accounts is available.</li>
+              <li>Give credit where credit is due.</li>
+              <li>Promote your special guests social media if available.</li>
+              <li>Did you upload on schedule? do you need to re-schedule?</li>
           </div>
-        </section>
+    </section>
 
-      </div>
       <footer id="footer">
         <p>Website made by Tevan.</p>
       </footer>
