--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@ on<!DOCTYPE html>
           <h1>Process</h1>
           <ol>
             <li>Will you be streaming live on twitch, posting a video on youtube, or sharing a photo on instagram?</li>
-            <li>Share a post on all Social Media Platforms promoting your content of choice.</li>
+            <li>Promote your content by sharing a post on all social media platforms.</li>
           </ol>
     </section>
     <section>
           <h1>Notes</h1>
           <ul>
-            <li>It is best to add a link of what you are promoting to your post.</li>
+            <li>Provide a link to your content in your promotional post.</li>
             <li>Connect your various social medias through the same account for easier sharing.</li>
             <li>Set a schedule for when you stream and post videos.</li>
-            <li>Instagram can be used for promotion and can be promoted itself.</li>
+            <li>Instagram can be used for promotion and can be promoted.</li>
             <li>Get some fresh air, take a break away from the screen.</li>
             <!-- <li>Repeat</li> -->
           </ul>
@@ -111,9 +111,9 @@ on<!DOCTYPE html>
           <div class="post post-featured">
             <h1>Double Check</h1>
             <ul>
-              <li>A link to all other social media accounts is available.</li>
+              <li>There is a link to other social media accounts on every site for easy access.</li>
               <li>Give credit where credit is due.</li>
-              <li>Promote your special guests social media if available.</li>
+              <li>Promote your guests social media if available.</li>
               <li>Did you upload on schedule? do you need to re-schedule?</li>
           </div>
     </section>
